--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ajax-promise": "^0.8.1",
     "async": "^2.6.1",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.18.0",
@@ -25,6 +26,7 @@
     "consolidate": "^0.15.1",
     "cookie-encrypter": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
@@ -53,17 +55,19 @@
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^2.6.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
     "reload": "^1.0.1",
     "sass-loader": "^4.0.0",
     "sequelize": "^3.24.0",
     "sequelize-cli": "^2.4.0",
+    "stripe": "^7.1.0",
     "style-loader": "^0.13.1",
     "swig": "^1.4.2",
     "url-loader": "^0.5.7",
-    "webpack": "^2.6.1",
     "watch": "^0.19.1",
+    "webpack": "^2.6.1",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
